--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ header {
     padding: 10px;
 }
 
-nav a {
+nav {
     color: white;
     text-decoration: wavy;
     padding: 10px;
@@ -13,6 +13,7 @@ nav a {
 
 h1, h2 {
     color: steelblue;
+    text-align: center;
 
 }
 
