--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ header {
 
 nav {
     color: white;
-    text-decoration: wavy;
+    text-decoration: auto;
     padding: 10px;
     display: block;
 }
