--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -33,6 +33,7 @@ header{
 
 p {
     padding: 25px;
+    text-align: center;
 
 }
 
@@ -57,5 +58,5 @@ nav a:link, nav a:visited {
 nav a:hover {
     color: var(--nav-link-color);
     background-color: var(--nav-hover-background-color);
-    
+
 }
