--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,11 +24,7 @@ main {
 }
 aside {
     width: 20em;
-    margin: 1em;
-    border: 1px solid rgba(0,0,0,0.2); /* */
-    padding: 1em;
     background-color: #eee;
-    color: #000000;
     text-align: center;
 }
 aside img {
@@ -36,10 +32,16 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 150px;
+}
 main img {
     width: 150px;
     height: auto;
     background-color: gray;
+    float: right;
 }
 
 p {
@@ -50,4 +52,21 @@ footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+* {
+    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+/* class selectors */
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,.1);
+    padding: 1rem;
+    color: #000;
 }
