--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,7 @@ aside {
     width: 20em;
     background-color: #eee;
     text-align: center;
+    position: relative;
 }
 aside img {
     width: 200px;
