--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,7 +28,12 @@ p {
     font-family: var(--paragraph-font);
     padding: 25px;
 }
+section img {
+    align-items: center;
+    width: 150;
+    height: auto;
 
+}
 .hero img{
     display: block;
     width: 100%;
@@ -46,5 +51,4 @@ h1 {
 
 article {
     position: absolute;
-    background-color: var(--nav-hover-background-color);
 }
