--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -36,8 +36,9 @@ section img {
 }
 .hero img{
     display: block;
-    width: 50%;
+    width: 45%;
     height: auto;
+    align-items: center;
 }
 
 article img {
