--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,7 +25,7 @@ header {
 }
 
 header img {
-    width: 50;
+    width: 15%;
     height: auto;
 }
 p {
@@ -72,6 +72,6 @@ article {
 }
 
 footer img {
-    width: 15;
+    width: 15%;
     height: auto;
 }
