--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -61,6 +61,7 @@ nav a {
 article img {
     position: right;
     box-shadow: gray;
+
 }
 
 h1 {
@@ -74,4 +75,5 @@ article {
 footer img {
     width: 15%;
     height: auto;
+    align-items: right;
 }
