--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,7 +25,7 @@ head {
 }
 
 head img {
-    width: 15%;
+    width: 50px;
     height: auto;
 }
 p {
@@ -34,13 +34,13 @@ p {
 }
 section img {
     align-items: center;
-    width: 100;
+    width: 100px;
     height: auto;
 
 }
 .hero img{
     display: block;
-    width: 45%;
+    width: 45px;
     height: auto;
     align-items: center;
 }
@@ -61,7 +61,7 @@ nav a {
 article img {
     position: right;
     box-shadow: gray;
-    width: 100;
+    width: 100px;
     height: auto;
 
 }
@@ -75,7 +75,7 @@ article {
 }
 
 footer img {
-    width: 15%;
+    width: 10px;
     height: auto;
     align-items: right;
 }
