--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,21 @@
 
-header {
+header, .grid, footer {
     background-color: steelblue;
     padding: 10px;
+    max-width: 840px;
+    margin: 0 auto;
 }
-
+h1 {
+    
+    border-bottom-color: steelblue;
+}
 nav {
-    color: white;
+    background-color: steelblue;
     text-decoration: auto;
-    padding: 10px;
-    display: block;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 title {
@@ -17,26 +24,36 @@ title {
 
 }
 
+.grid {
+    display: grid;
+    align-items: center;
+}
 main {
-    max-width: 840px;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 aside {
     width: 20em;
     background-color: #eee;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 aside img {
     width: 200px;
     height: auto;
 }
 
-aside h2 {
-    position: absolute;
-    top: 47px;
-    left: 150px;
+nav a {
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
 }
 main img {
     width: 150px;
