--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,10 @@ title {
     text-align: center;
 
 }
+body {
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
 
 .grid {
     display: grid;
@@ -33,9 +37,10 @@ main {
     box-shadow: 0 0 30px gray;
     grid-column: 2/3;
     margin: 1rem;
+    display: block;
 }
 aside {
-    width: 20em;
+    width: 20rem;
     background-color: #eee;
     text-align: center;
     position: relative;
@@ -75,7 +80,6 @@ footer {
 * {
     
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
 
 }
@@ -87,4 +91,5 @@ footer {
     border: 1px solid rgba(0,0,0,.1);
     padding: 1rem;
     color: #000;
+    background-color: #eee;
 }
