--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ title {
 }
 body {
     font-size: 16px;
-    font-family: Roboto, Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .grid {
