--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -19,13 +19,17 @@
 
 head {
     padding: 20px;
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: 120px 1fr 2fr;
     text-align: center;
     font-family: var(--header-font);
     background-color: var(--nav-background-color);
 }
 
 head img {
-    width: 50px;
+    margin: 0 0.25rem 0;
+    width: 64px;
     height: auto;
 }
 p {
@@ -50,6 +54,7 @@ nav {
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
+    text-align: right;
 }
 
 nav a {
@@ -57,6 +62,7 @@ nav a {
     color: var(--nav-hover-link-color);
     text-decoration: none;
     padding: 1rem;
+    
 }
 
 article img {
