--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -84,6 +84,9 @@ article {
     position: absolute;
 }
 
+footer {
+    place-items: bottom right;
+}
 footer img {
     display: grid;
     width: 15px;
