--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,7 +20,7 @@
 head {
     padding: 20px;
     margin: 1rem auto;
-    display: grid;
+    display: block;
     grid-template-columns: 120px 1fr 2fr;
     text-align: center;
     font-family: var(--header-font);
