--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,6 +27,16 @@ head {
     background-color: var(--nav-background-color);
 }
 
+
+main {
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+    grid-column: 2/3;
+    margin: 1rem;
+    display: block;
+}
+
+
 head img {
     margin: 0 0.25rem 0;
     width: 64px;
@@ -89,6 +99,7 @@ article {
 
 footer {
     place-items: bottom right;
+    border-top: 1px solid #000;
 }
 footer img {
     display: grid;
