--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -98,7 +98,7 @@ article {
 }
 
 footer {
-    place-items: bottom right;
+    text-align: center;
     border-top: 1px solid #000;
 }
 footer img {
