--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -62,7 +62,7 @@ section img {
     display: block;
     width: 45px;
     height: auto;
-    align-items: center;
+    align-items: under;
     position: absolute;
 }
 
@@ -70,6 +70,7 @@ nav {
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: block;
+    align-items:flex-end
 }
 
 nav a {
@@ -77,7 +78,7 @@ nav a {
     color: var(--nav-hover-link-color);
     text-decoration: none;
     padding: 1rem;
-    
+    color: var(--nav-hover-link-color-color);
 }
 
 article img {
@@ -94,6 +95,7 @@ section title {
 
 h1 {
     position: top center;
+    border-bottom: #000; 
 }
 
 article {
