--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -89,6 +89,14 @@ article img {
 
 }
 
+section{
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+    grid-column: 2/3;
+    margin: 1rem;
+    display: block;
+
+}
 section title {
     text-align: top center;
 }
