--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,6 +27,11 @@ header {
     background-color: var(--nav-background-color);
 }
 
+header, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 .grid {
     display: grid;
     align-items: center;
@@ -39,7 +44,12 @@ main {
     margin: 1rem;
     display: block;
 }
-
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
 
 head img {
     margin: 0 0.25rem 0;
