--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -19,10 +19,12 @@
 
 header {
     padding: 20px;
+    max-width: 1000px;
     margin: 1rem auto;
-    display: block;
+    display: grid;
+    border-bottom: 1px solid #000;
     grid-template-columns: 120px 1fr 2fr;
-    text-align: center;
+    align-items: center;
     font-family: var(--header-font);
     background-color: var(--nav-background-color);
 }
@@ -81,8 +83,14 @@ nav {
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: block;
-    align-items:flex-end
+    text-align: right;
 }
+
+.navigation {
+    display: flex;
+    list-style: none;
+}
+
 
 nav a {
     display: block;
