--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -116,10 +116,17 @@ section{
     display: block;
 
 }
-section title {
-    text-align: center;
+
+.flexbox-container{
+    height:auto;
+    display: flex;
+    align-content: space-between;
+
 }
 
+.flexbox-item-3, .flexbox-item-1, .flexbox-item-2{
+    min-height: 300px;
+}
 h1 {
     position: top;
     border-bottom: #000; 
