--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -58,7 +58,7 @@ header img {
     margin: 0 0.25rem 0;
     width: 64px;
     height: auto;
-    display: right;
+    
 }
 p {
     font-family: var(--paragraph-font);
@@ -67,7 +67,6 @@ p {
 }
 
 section img {
-    align-items: auto;
     width: 150px;
     height: auto;
 
@@ -127,7 +126,7 @@ section{
     min-height: 300px;
 }
 h1 {
-    position: center;
+    position: absolute;
     border-bottom: #000; 
 }
 
