--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -21,7 +21,7 @@ header {
     padding: 20px;
     max-width: 1000px;
     margin: 1rem auto;
-    display: grid;
+    display: flex;
     border-bottom: 1px solid #000;
     grid-template-columns: 120px 1fr 2fr;
     align-items: center;
@@ -29,7 +29,7 @@ header {
     background-color: var(--nav-background-color);
 }
 
-header, footer {
+header, .grid, footer {
     max-width: 840px;
     margin: 0 auto;
 }
@@ -140,7 +140,7 @@ footer {
     display: grid;
 }
 footer img {
-    display: grid;
+    display: flex;
     width: 15px;
     height: auto;
 }
