--- a/wdd130/styles/quiz.css
+++ b/wdd130/styles/quiz.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.goodleapis.com/css2?family=merriweather&family=Roboto&display=swap');
 
 
 * {
@@ -24,7 +23,7 @@ form{
     width: 650px;
     margin: 0 auto;
     padding: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0, 0.1);
+    border: 1px rgba(0, 0, 0, 0, 0.1);
     border-radius: 0.5rem;
     background-color: #eee;
     display: grid;
@@ -34,7 +33,7 @@ fieldset {
     display: grid;
     grid-gap: .5rem;
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0, 0.2);
+    border: 1px rgba(0, 0, 0, 0, 0.2);
     padding: 1rem;
 }
 p {
