--- a/wdd130/styles/quiz.css
+++ b/wdd130/styles/quiz.css
@@ -23,7 +23,7 @@ form{
     width: 650px;
     margin: 0 auto;
     padding: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0, 0.1rem);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
     background-color: #eee;
     display: grid;
@@ -33,7 +33,7 @@ fieldset {
     display: grid;
     grid-gap: .5rem;
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0, 0.2rem);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
 }
 p {
