--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -126,6 +126,9 @@ h1 {
     position: absolute;
     border-bottom: #000; 
 }
+.map{
+    width: 200px;
+}
 
 article {
     position: absolute;
@@ -158,7 +161,7 @@ body {
 
 
 form{
-    width: 650px;
+    width: auto;
     margin: 0 auto;
     padding: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1);
