--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -128,7 +128,13 @@ h1 {
     border-bottom: #000; 
 }
 
-
+aside {
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+    margin: 1rem;
+    display: block;
+    position: relative;
+}
 
 
 article {
