--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -56,12 +56,18 @@ aside {
     grid-row: 1/2;
 }
 
+h2{
+    text-align: center;
 
+}
 header img {
     margin: 0 0.25rem 0;
     width: 64px;
     height: auto;
     
+}
+.map{
+    align-items: center;
 }
 p {
     font-family: var(--paragraph-font);
