--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -168,6 +168,7 @@ body {
 form{
     width: auto;
     margin: 0 auto;
+    height: fit-content;
     padding: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
