--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -126,6 +126,7 @@ section{
 
 .flexbox-item-3, .flexbox-item-1, .flexbox-item-2{
     min-height: 300px;
+    max-height: 800px;
 }
 h1 {
     position: absolute;
@@ -165,7 +166,6 @@ body {
 
 form{
     width: auto;
-    height: 600px;
     margin: 0 auto;
     height: fit-content;
     padding: 1rem;
