--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -42,7 +42,7 @@ header, .grid, footer {
 .grid-item-2{
     display: grid;
     align-content: space-around;
-    grid-row: 1;
+    align-items: center;
 }
 main {
     padding: 2px;
