--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,31 @@
 
+:root {
+    --primary-color: #E3D7FF;
+    --secondary-color: #084887;
+    --accent1-color: #F58A07;
+    --accent2-color: #F9AB55;
+
+    --header-font: 'auto', serif;
+    --paragraph-font: 'auto', sans-serif;
+
+    --nav-background-color: #084887;
+    --nav-link-color: #E3D7FF;
+    --nav-hover-link-color: #E3D7FF;
+    --nav-hover-background-color: #E3D7FF;
+}
+
 header, .grid, footer {
-    background-color: steelblue;
+    background-color: var(--primary-color);
     padding: 10px;
     max-width: 840px;
     margin: 0 auto;
 }
 h1 {
     
-    border-bottom-color: steelblue;
+    border-bottom-color: var(--secondary-color);
 }
 nav {
-    background-color: steelblue;
+    background-color: var(--primary-color);
     text-decoration: auto;
     padding: 1rem;
     display: flex;
@@ -19,7 +34,7 @@ nav {
 }
 
 title {
-    color: steelblue;
+    color: var(--secondary-color);
     text-align: center;
 
 }
@@ -49,7 +64,7 @@ section{
 }
 aside {
     width: 20rem;
-    background-color: #eee;
+    background-color: var(--primary-color);
     text-align: center;
     position: relative;
     grid-column: 1/2;
@@ -66,7 +81,7 @@ nav a {
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 700;
-    color: #fff;
+    color: var(--nav-background-color);
 }
 main img {
     width: 150px;
