--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -103,3 +103,10 @@ nav a:hover {
     background-color: var(--nav-hover-background-color);
 
 }
+.navbar{
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 15px 0;
+    position: relative;
+    min-height: 50px;
+}
