--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -86,7 +86,26 @@ nav {
     display: flex;
 
 }
-
+.feature-wrap{
+    margin-bottom: 35px;
+    overflow: hidden;
+}
+.feature-wrap h2 {
+    margin-top: 10px;
+}
+.feature-wrap p {
+    line-height: 1.8;
+    margin-bottom: 10px;
+}
+.center{
+    text-align: center;
+    padding-bottom: 35px;
+}
+.center h2{
+    font-size: 36px;
+    margin-top: 0;
+    margin-bottom: 35px;
+}
 nav a {
     display: block;
     color: var(--nav-hover-link-color);
