--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -38,11 +38,13 @@ img {
     font-size: 70px;
     color: #fff;
     text-shadow: 2px 2px 2px #333;
+    margin-top: 200px;
 }
 #home-hero p{
     font-size: 32px;
     color: #fff;
-    text-shadow: 2px 2px 2px #333; 
+    text-shadow: 2px 2px 2px #333;
+    line-height: 1.5; 
 }
 .no-margin{
     margin: 0;
