--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -166,4 +166,14 @@ nav a:hover {
     background-color: var(--nav-hover-background-color);
 
 }
-
+.feature-wrap{
+    margin-bottom: 35px;
+    overflow: hidden;
+}
+.feature-wrap h2 {
+    margin-top: 10px;
+}
+.feature-wrap p {
+    line-height: 1.8;
+    margin-bottom: 10px;
+}
