--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -205,3 +205,9 @@ button{
  .column2 {
     grid-template-columns: 1fr 2fr;
  }
+ html{
+    display:block;
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    font-size: 62.5%;
+ }
