--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -31,8 +31,16 @@ img {
 
 #home-hero{
     position: relative;
-    background: url(image/rafting.four.jpg) no-repeat center center;
+    background: url(/images/homepage/overview-2.jpg) no-repeat center center;
     background-size: cover;
+    background-image: url(/images/homepage/overview-2.jpg);
+    background-position-x: center;
+    background-position-y: center;
+    background-size: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: initial;
 }
 #home-hero h1{
     font-size: 70px;
